--- a/source/_posts/202111151.md
+++ b/source/_posts/202111151.md
@@ -1,8 +1,8 @@
 ---
 title: 厚植绿色发展理念 培育生态校园文明
 tags: [生态文明]
-index_img: /img/default.jpg
-banner_img: /img/default.jpg
+index_img: /img/default.png
+banner_img: /img/default.png
 date: 2021-11-15
 ---
 
